--- a/rebecca/stock-api-server/app/views/layouts/application.html.erb
+++ b/rebecca/stock-api-server/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 </head>
 <body>
   <div class="container">
+    <p style="color: green"><%= flash[:notice] %></p>
+    <p style="color: red"><%= flash[:alert] %></p>
     <%= yield %>
   </div>
 </body>
