--- a/rebecca/stock-api-server/app/views/stock/index.html.erb
+++ b/rebecca/stock-api-server/app/views/stock/index.html.erb
@@ -1,1 +1,13 @@
+<%= form_tag '/search', method: :get do %>
+  <div>
+    <%= label_tag :日期 %>
+    <%= text_field_tag :date %>
+  </div>
+  <div>
+    <%= label_tag :股票代號 %>
+    <%= text_field_tag :code %>
+    <%= submit_tag :搜尋 %>
+  </div>
+<% end %>
+
 <%= render :partial => 'table'%>
