--- a/chloe/auto_stock_server/app/assets/stylesheets/application.scss
+++ b/chloe/auto_stock_server/app/assets/stylesheets/application.scss
@@ -11,3 +11,7 @@
  *= require_self
  *= require_tree .
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "bootstrap/theme";  // this is optional
