--- a/chloe/auto_stock_server/app/assets/stylesheets/turnovers.css.scss
+++ b/chloe/auto_stock_server/app/assets/stylesheets/turnovers.css.scss
@@ -25,7 +25,7 @@ body {
       margin-top: 20px;
       margin-bottom: 20px;
       form {
-        input {
+        input, .searchBtn {
           padding: 4px 10px;
           border: solid #000 1px;
           border-radius: 4px;
@@ -33,9 +33,11 @@ body {
         }
         .numberInput {
           width: 100px;
+          height: 30px;
         }
         .dateInput {
-          width: 140px;
+          width: 200px;
+          height: 30px;
         }
         .dateLabel, .searchBtn {
           margin-left: 20px;
