--- a/chloe/auto_stock_server/app/assets/stylesheets/turnovers.css.scss
+++ b/chloe/auto_stock_server/app/assets/stylesheets/turnovers.css.scss
@@ -47,6 +47,12 @@ body {
     table {
       thead tr th {
         font-size: 16px;
+        button {
+          background-color: rgba(255, 255, 255, 0);
+          padding: 0px;
+          border-width: 1px;
+          border-color: rgba(255, 255, 255, 0);
+        }
       }
       .id {
         width: 60px;
