--- a/rebecca/stock-api-server/app/views/layouts/application.html.erb
+++ b/rebecca/stock-api-server/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body ng-app='stockApp'>
   <div class="container">
     <p style="color: green"><%= flash[:notice] %></p>
     <p style="color: red"><%= flash[:alert] %></p>
