change stock table to angular view

--- a/rebecca/stock-api-server/app/views/stock/index.html.erb
+++ b/rebecca/stock-api-server/app/views/stock/index.html.erb
@@ -2,4 +2,4 @@
 
 <%= button_to "save page", stock_url(format: :csv), method: :get %>
 
-<%= render :partial => 'table'%>
+<stock-table stocks='<%=@stocks.to_json%>' sortType='vm.sortType' sortReverse='vm.sortReverse'></stock-table>
