--- a/chloe/auto_stock_server/app/assets/stylesheets/turnovers.css.scss
+++ b/chloe/auto_stock_server/app/assets/stylesheets/turnovers.css.scss
@@ -25,7 +25,8 @@ body {
       margin-top: 20px;
       margin-bottom: 20px;
       form {
-        input, .searchBtn {
+        position: relative;
+        input, .searchBtn, .exportBtn {
           padding: 4px 10px;
           border: solid #000 1px;
           border-radius: 4px;
@@ -41,6 +42,10 @@ body {
         }
         .dateLabel, .searchBtn {
           margin-left: 20px;
+        }
+        .exportBtn {
+          position: absolute;
+          right: 0;
         }
       }
     }
