--- a/chloe/auto_stock_server/app/assets/templates/search.html
+++ b/chloe/auto_stock_server/app/assets/templates/search.html
@@ -5,5 +5,6 @@
     <label class='dateLabel'>搜尋日期 ：</label>
     <input id='dateInput' class='dateInput' type='date' ng-model='searchDate'>
     <button class='searchBtn' ng-click='searchFunction()'>search</button>
+    <button class='exportBtn' ng-click='exportFunction()'>export</button>
   </form>
 </div>
