--- a/chloe/auto_stock_server/app/views/turnovers/index.html.erb
+++ b/chloe/auto_stock_server/app/views/turnovers/index.html.erb
@@ -1,4 +1,4 @@
 <div class='turnovers' ng-app='turnoversApp' ng-controller='TurnoverCtrl'>
-  <search stock-number='number' search-date='date' search-function='search()'></search>
+  <search stock-number='number' search-date='date' search-function='search()' export-function='export()'></search>
   <stock-table desc='desc' asc='asc' turnovers='turnovers' sortDesc='sortDesc()' sortAsc='sortAsc()'></stock-table>
 </div>
