--- a/chloe/auto_stock_server/app/assets/stylesheets/turnovers.css.scss
+++ b/chloe/auto_stock_server/app/assets/stylesheets/turnovers.css.scss
@@ -25,7 +25,7 @@ body {
       margin-top: 20px;
       margin-bottom: 20px;
       form {
-        input, .searchBtn {
+        input, .searchBtn, .exportBtn {
           padding: 4px 10px;
           border: solid #000 1px;
           border-radius: 4px;
@@ -39,7 +39,7 @@ body {
           width: 200px;
           height: 30px;
         }
-        .dateLabel, .searchBtn {
+        .dateLabel, .searchBtn, .exportBtn {
           margin-left: 20px;
         }
       }
