change html to slim template

--- a/rebecca/stock-api-server/app/assets/stylesheets/stock.css.scss
+++ b/rebecca/stock-api-server/app/assets/stylesheets/stock.css.scss
@@ -6,3 +6,6 @@ td { text-align: right; }
 th { text-align: right; }
 .text-red { color: red }
 .text-green { color: green }
+.set-right {
+  text-align: right
+}
