add class to view

--- a/rebecca/stock-api-server/app/views/stock/index.html.slim
+++ b/rebecca/stock-api-server/app/views/stock/index.html.slim
@@ -1,7 +1,8 @@
 search-form
 
-button
-  a href= stock_url(format: :csv) 
-    |save page
+div.set-right
+  button
+    a href= stock_url(format: :csv) 
+      |儲存檔案
 
 stock-table (stocks= @stocks.to_json sortType='vm.sortType' sortReverse='vm.sortReverse')
