add angular route to search stock

--- a/rebecca/stock-api-server/app/views/stock/index.html.slim
+++ b/rebecca/stock-api-server/app/views/stock/index.html.slim
@@ -5,4 +5,6 @@ div.set-right
     a href= stock_url(format: :csv) 
       |儲存檔案
 
-stock-table (stocks= @stocks.to_json sortType='vm.sortType' sortReverse='vm.sortReverse')
+ng-view
+div ng-controller='TableController as tCtrl'
+  stock-table (ng-show='tCtrl.isEmpty(tCtrl.$location.search())' stocks= @stocks.to_json sortType='vm.sortType' sortReverse='vm.sortReverse')
