remove unnecessary parameter passing

--- a/rebecca/stock-api-server/app/views/stock/index.html.slim
+++ b/rebecca/stock-api-server/app/views/stock/index.html.slim
@@ -7,4 +7,4 @@ div.set-right
 
 ng-view
 div ng-controller='TableController as tCtrl'
-  stock-table (ng-show='tCtrl.isEmpty(tCtrl.$location.search())' stocks= @stocks.to_json sortType='vm.sortType' sortReverse='vm.sortReverse')
+  stock-table (ng-show='tCtrl.paramIsEmpty()' stocks= @stocks.to_json sortType='vm.sortType' sortReverse='vm.sortReverse')
