--- a/chloe/auto_stock_server/app/views/turnovers/index.html.slim
+++ b/chloe/auto_stock_server/app/views/turnovers/index.html.slim
@@ -1,3 +1,3 @@
 div.turnovers ng-app='turnoversApp' ng-controller='TurnoverCtrl' ng-init="init('#{@turnovers.to_json}')"
   search stock-number='number' search-date='date' search-function='search()' export-function='export()'
-  stock-table desc='desc' asc='asc' turnovers='turnovers' sortDesc='sortDesc()' sortAsc='sortAsc()'
+  stock-table desc='desc' asc='asc' turnovers='turnovers' sort-desc='sortDesc(column)' sort-asc='sortAsc(column)'
